# LitScout-RS

./: .env.example  .gitignore  ACCURACY_EVALUATION_PROTOCOL.md  Cargo.toml  IMPLEMENTATION_NOTES.md  PRODUCT.md  README.md  README.zh-CN.md  RUN_WORKFLOW.md  SEARCH_BOUNDARY_EXPANSION_PLAN.md  SOURCE_ADAPTER_MATRIX.md  TODO.md  config.example.toml  tags.example.toml
.github/workflows/: ci.yml
docs/: WEB_PAGE_FUNCTIONS.md  demo_slides.md
eval/expected/: stage3_expected.json
eval/fixtures/: stage3_mock_sources.json  stage3_topics.json
eval/results/: stage3-mini-bench.json
examples/: sample_llm_report.md  sample_report.md
scripts/: demo.sh  stage3_eval.mjs
src/: cache.rs  checkpoint.rs  classify.rs  cli.rs  config.rs  dedup.rs  error.rs  main.rs  model.rs  quality.rs  ranking.rs  report.rs  run_policy.rs  session.rs  trace.rs  workflow.rs  workflow_state.rs
src/agent/: academic_scout.rs  arxiv_scout.rs  citation_auditor.rs  coverage_critic.rs  evidence.rs  evidence_quality.rs  followup_router.rs  github_scout.rs  middleware.rs  mod.rs  orchestrator.rs  plan_critic.rs  planner.rs  report_chat.rs  scoper.rs  writer.rs
src/llm/: deepseek.rs
src/reading/: fetcher.rs  library.rs  mod.rs  models.rs  note_writer.rs  paper_chat.rs
src/server/: dto.rs  mod.rs  routes.rs  state.rs
src/sources/: arxiv.rs  crossref.rs  dblp.rs  github.rs  mod.rs  openalex.rs  semantic_scholar.rs
tests/fixtures/: arxiv_search.xml  crossref_search.json  dblp_search.json  github_search.json  openalex_search.json  semantic_scholar_search.json
web/: index.html  package-lock.json  package.json  tsconfig.node.json
(+22 files in other folders)
